# axum-mtls-client-authentication

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  default.conf  docker-compose.yml  entrypoint.sh  nginx.conf
certs/: .gitignore  ca-cert.pem  ca-cert.srl  ca-key.pem  client-cert.conf  client-cert.ext  client-cert.pem  client-key.pem  client.csr  client.pfx  generate-client-ca.sh  generate-client.sh  generate-server.sh  lib.sh  server-cert.pem  server-key.der  server-key.pem  server.csr  setup.sh
certs/frontend/: generate-client.sh  openssl.cnf  revoke-client.sh
src/: auth.rs  lib.rs  main.rs
