[package]
name = "mtls-client-authentication"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
axum-server = { version = "0.6", features = ["tls-rustls"] }
futures-util = "0.3"
rustls = "0.21"
rustls-pemfile = "2.1"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.24"
tower = "0.4"
x509-parser = "0.16"
